# ChangeLog for dev-java/icu4j
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/icu4j/ChangeLog,v 1.15 2007/05/18 21:57:31 welp Exp $

  18 May 2007; Peter Weller <welp@gentoo.org> icu4j-3.0-r1.ebuild:
  Stable on amd64 wrt bug 176634

  09 May 2007; Raúl Porcel <armin76@gentoo.org> icu4j-3.0-r1.ebuild:
  Add ~ia64 wrt #160813

  01 May 2007; Matti Bickel <mabi@gentoo.org> icu4j-3.0-r1.ebuild:
  ppc stable (bug #176634)

  15 Apr 2007; Andrej Kacian <ticho@gentoo.org> icu4j-3.0-r1.ebuild:
  Stable on x86.

  08 Apr 2007; Markus Rothe <corsair@gentoo.org> icu4j-3.0-r1.ebuild:
  Stable on ppc64; bug #173207

  14 Feb 2007; Markus Rothe <corsair@gentoo.org> icu4j-3.0-r1.ebuild:
  Added ~ppc64

  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> icu4j-3.0-r1.ebuild:
  Add ~x86-fbsd keyword.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> icu4j-3.0.ebuild,
  icu4j-3.0-r1.ebuild:
  Dropping sparc keywords, see #96229

*icu4j-3.0-r1 (15 Aug 2006)

  15 Aug 2006; Krzysiek Pawlik <nelchael@gentoo.org> +icu4j-3.0-r1.ebuild:
  Migrated to new Java build system.

  12 Jun 2005; Jason Wever <weeve@gentoo.org> icu4j-3.0.ebuild:
  Added ~sparc keyword wrt bug #95859.

  28 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> icu4j-3.0.ebuild:
  stable on amd64, ppc and x86. introduced support for the jikes and the source
  useflag

  20 Oct 2004; Dylan Carlson <absinthe@gentoo.org> icu4j-3.0.ebuild:
  Keywords ~amd64.

  17 Oct 2004; David Holm <dholm@gentoo.org> icu4j-3.0.ebuild:
  Added to ~ppc.

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> icu4j-3.0.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*icu4j-3.0 (19 Sep 2004)

  19 Sep 2004; Thomas Matthijs <axxo@gentoo.org> +metadata.xml,
  +icu4j-3.0.ebuild:
  initial import, ebuild created by me as a dep
