@@ -1,24 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST icu4jdocs_3_0.jar 1458824 RMD160 9f2391db66c5f12f4faf982b8b90dc5940de588c SHA1 cb9599d4eeae2e18352c2d1dd0ab0353c47500f5 SHA256 13b38d12566fba7d3e23a762fce15d3c03048da7bff4ddd6d1f03277fb2de6b0
 DIST icu4jsrc_3_0.jar 8987972 RMD160 490d34765f678393bdbe6cabcff1755f6dd4154c SHA1 a8868abdecdd87913750d4e20f748832a3de74e9 SHA256 96fb1a09fe7021bfab76cc732daf76b0ce2bb64f84bf67b2ae1e610666edbdda
 EBUILD icu4j-3.0-r1.ebuild 1103 RMD160 96ae817a6f6a98c3f300288f0ab671b0c6a0a09a SHA1 7f795957ec44137b62c33aa2edcd41f4e891358c SHA256 227d9b0a26a601d3e75a40dd6987895c76263fc65cdf4117561408882c19f7e7
 MD5 ff05b99636d1f0306807b5da40b2a1f5 icu4j-3.0-r1.ebuild 1103
 RMD160 96ae817a6f6a98c3f300288f0ab671b0c6a0a09a icu4j-3.0-r1.ebuild 1103
 SHA256 227d9b0a26a601d3e75a40dd6987895c76263fc65cdf4117561408882c19f7e7 icu4j-3.0-r1.ebuild 1103
-EBUILD icu4j-3.0.ebuild 1191 RMD160 04069fb3245143e2c2419b71840965334aa7fc0d SHA1 79baccd4df0d3041f11af2308623ed8408c79657 SHA256 af78de7faf4e736eb86d95a4ad29b1607456c221af0e12c083a9ef83829093f3
-MD5 70839e3605ed93a32a1f0d05d64b669e icu4j-3.0.ebuild 1191
-RMD160 04069fb3245143e2c2419b71840965334aa7fc0d icu4j-3.0.ebuild 1191
-SHA256 af78de7faf4e736eb86d95a4ad29b1607456c221af0e12c083a9ef83829093f3 icu4j-3.0.ebuild 1191
-MISC ChangeLog 1908 RMD160 a154508ed20a9e05adda2210c412cf245e00cb4f SHA1 318ffe4a2a0dc8e683a4dd8c12f249d1731a5a71 SHA256 5913e2fe9ae46bb255e379104b6c650ec4eecd2e519173a56005f1fb2f767eca
-MD5 f47f0ca526abf2c893ac6a6448397f5c ChangeLog 1908
-RMD160 a154508ed20a9e05adda2210c412cf245e00cb4f ChangeLog 1908
-SHA256 5913e2fe9ae46bb255e379104b6c650ec4eecd2e519173a56005f1fb2f767eca ChangeLog 1908
+MISC ChangeLog 2017 RMD160 05736aefc7fa37441524f057530723f1af3a4c77 SHA1 3da036a58008fcce4f083087937f91d34ae490ca SHA256 faf68053006d15b62e8dfbd33ef3cceab6fb6baa144c3942089a0382a3d807cc
+MD5 5b9f36525177e2a438d48058e9c64827 ChangeLog 2017
+RMD160 05736aefc7fa37441524f057530723f1af3a4c77 ChangeLog 2017
+SHA256 faf68053006d15b62e8dfbd33ef3cceab6fb6baa144c3942089a0382a3d807cc ChangeLog 2017
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
 MD5 123cf9440c1d4ac78f2caba1624765f9 metadata.xml 158
 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 metadata.xml 158
 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb metadata.xml 158
-MD5 099c61f7bd93c84f7e59439a94b7ee97 files/digest-icu4j-3.0 467
-RMD160 076fda3c15ef911204f4690fc6dc1e4ddf3163b8 files/digest-icu4j-3.0 467
-SHA256 fbdf152e5320217e4e9ec95e9b0347bb95f21ef9d7bff4f66ddfff6df9f448a5 files/digest-icu4j-3.0 467
 MD5 099c61f7bd93c84f7e59439a94b7ee97 files/digest-icu4j-3.0-r1 467
 RMD160 076fda3c15ef911204f4690fc6dc1e4ddf3163b8 files/digest-icu4j-3.0-r1 467
 SHA256 fbdf152e5320217e4e9ec95e9b0347bb95f21ef9d7bff4f66ddfff6df9f448a5 files/digest-icu4j-3.0-r1 467
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGXaYbcxLzpIGCsLQRApBiAJ9Cl82eA30fLOZAK4IBuDjJ37aUIQCgk8H4
+udlYhE8IBkqcCZyJLkpsPBI=
+=QrWS
+-----END PGP SIGNATURE-----
