@@ -1,6 +1,0 @@
-MD5 6c163a694aa9a2a672ef9f5b839685f7 icu4jdocs_3_0.jar 1458824
-RMD160 9f2391db66c5f12f4faf982b8b90dc5940de588c icu4jdocs_3_0.jar 1458824
-SHA256 13b38d12566fba7d3e23a762fce15d3c03048da7bff4ddd6d1f03277fb2de6b0 icu4jdocs_3_0.jar 1458824
-MD5 21832c2b433cce7e2e980c88066bd73b icu4jsrc_3_0.jar 8987972
-RMD160 490d34765f678393bdbe6cabcff1755f6dd4154c icu4jsrc_3_0.jar 8987972
-SHA256 96fb1a09fe7021bfab76cc732daf76b0ce2bb64f84bf67b2ae1e610666edbdda icu4jsrc_3_0.jar 8987972
