@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/icu4j
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/icu4j/ChangeLog,v 1.15 2007/05/18 21:57:31 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/icu4j/ChangeLog,v 1.16 2007/05/30 16:28:09 betelgeuse Exp $
+
+  30 May 2007; Petteri Räty <betelgeuse@gentoo.org> -icu4j-3.0.ebuild:
+  Remove generation 1 ebuild.
 
   18 May 2007; Peter Weller <welp@gentoo.org> icu4j-3.0-r1.ebuild:
   Stable on amd64 wrt bug 176634
